- Fixed syncml namespacing bugs
- Fixed problem with file uploader when no user quota was set.
- Dropbox: Fixed problem with finding dropbox api files (namespaces)
- Google drive: Fixed problem with finding Googledrive_service class file
- Fixed problem with timeentry status that was automatically appoved even when the hoursapproval2 module was installed.
- Project display bug

01-10-2014 6.0.27
- Quota fixed
- User import broken due to namespaces
- Fixed problem with &$this variable that is passed to the listener functions (Changed to &$self) (Only breaks in Ioncube encoded files)
- Modules: Make sort order field sortable in the grid
- Added comments panel in the dialogs of the following items: company, contact, event, note, task

22-09-2014 6.0.26
- Small fixes

22-09-2014 6.0.25
- Public release
- Removed config.php to prevent upgrade issue
- Fixed problem with creating new sieve filterset.

19-09-2014 6.0.24
- Forgot to commit one fix

19-09-2014 6.0.23
- Billing template logo bug fixed
- Merged v5 fixes.
- added selectRecord function in the multiSelectGrid component.

17-09-2014 6.0.22
- Fixed table cal_events "files_folder_id"
- Added sort order field in the modules grid
- customcss: Make public uploaded files accessible without logging in to GO.
- Improved invoicing in projects2 module.
- Prefix and Suffix in custom field.

04-09-2014 6.0.21
- Bug in invoicing from projects

03-09-2014 6.0.20
- Bug in invoicing from projects

29-08-2014 6.0.19
- Invoicing for projects2.

21-08-2014 6.0.18
- Added icons for male and female
- Added colorpicker to contacts and companies. With this colorpicker you can set the text color of the contacts and companies in the Grid.

18-08-2014 6.0.17
- Integrated WebODF editor for online odt documents.

14-08-2014 6.0.16
- Fixes for customer module.
- Default theme fixed.

12-08-2014 6.0.15
- Fixed public symlink
- Fixed dovecot auth for postfix

12-08-2014 6.0.14
- Fixed install bug